@@ -15,11 +15,9 @@
  */
 package org.craftercms.studio.impl.v2.repository.blob.s3;
 
-import com.amazonaws.services.s3.model.*;
 import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.configuration2.HierarchicalConfiguration;
 import org.apache.commons.configuration2.tree.ImmutableNode;
-import org.apache.commons.lang.StringUtils;
 import org.apache.commons.lang3.ArrayUtils;
 import org.craftercms.commons.aws.AwsUtils;
 import org.craftercms.commons.config.ConfigurationException;
@@ -29,25 +27,36 @@ import org.craftercms.commons.file.blob.impl.s3.AwsS3BlobStore;
 import org.craftercms.studio.api.v1.exception.BlobNotFoundException;
 import org.craftercms.studio.api.v1.exception.ServiceLayerException;
 import org.craftercms.studio.api.v1.service.configuration.ServicesConfig;
-import org.craftercms.studio.api.v1.to.DeploymentItemTO;
+import org.craftercms.studio.api.v2.dal.publish.PublishItem;
+import org.craftercms.studio.api.v2.dal.publish.PublishPackage;
 import org.craftercms.studio.api.v2.exception.blob.BlobStoreNotWritableModeException;
-import org.craftercms.studio.api.v2.repository.RepositoryChanges;
+import org.craftercms.studio.api.v2.exception.publish.PublishException;
+import org.craftercms.studio.api.v2.repository.PublishItemTO;
 import org.craftercms.studio.api.v2.repository.blob.StudioBlobStore;
-import org.craftercms.studio.api.v2.repository.blob.StudioBlobStoreAdapter;
+import org.craftercms.studio.impl.v2.utils.PublishUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.*;
+import software.amazon.awssdk.services.s3.paginators.ListObjectsV2Iterable;
 
 import java.beans.ConstructorProperties;
 import java.io.InputStream;
 import java.nio.file.Paths;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static java.lang.String.format;
-import static java.util.stream.Collectors.toList;
+import static java.util.Collections.emptyList;
+import static java.util.stream.Collectors.groupingBy;
+import static org.apache.commons.collections4.CollectionUtils.subtract;
 import static org.apache.commons.io.FilenameUtils.getExtension;
+import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
 import static org.apache.commons.lang3.StringUtils.*;
 import static org.craftercms.commons.config.ConfigUtils.getBooleanProperty;
+import static org.craftercms.studio.api.v2.dal.publish.PublishItem.Action.ADD;
+import static org.craftercms.studio.api.v2.dal.publish.PublishItem.Action.DELETE;
 import static org.craftercms.studio.impl.v1.service.aws.AwsUtils.*;
 
 /**
@@ -56,7 +65,8 @@ import static org.craftercms.studio.impl.v1.service.aws.AwsUtils.*;
  * @author joseross
  * @since 3.1.6
  */
-public class StudioAwsS3BlobStore extends AwsS3BlobStore implements StudioBlobStoreAdapter {
+public class StudioAwsS3BlobStore extends AwsS3BlobStore implements StudioBlobStore {
+
 
     private static final Logger logger = LoggerFactory.getLogger(StudioAwsS3BlobStore.class);
 
@@ -67,6 +77,8 @@ public class StudioAwsS3BlobStore extends AwsS3BlobStore implements StudioBlobSt
     protected boolean readOnly;
 
     private final ThreadPoolTaskExecutor taskExecutor;
+
+
 
     @ConstructorProperties({"servicesConfig", "taskExecutor"})
     public StudioAwsS3BlobStore(final ServicesConfig servicesConfig, final ThreadPoolTaskExecutor taskExecutor) {
@@ -105,10 +117,14 @@ public class StudioAwsS3BlobStore extends AwsS3BlobStore implements StudioBlobSt
     public Blob getReference(String path) {
         Mapping mapping = getMapping(publishingTargetResolver.getPublishingTarget());
         try {
-            ObjectMetadata metadata = getClient().getObjectMetadata(mapping.target, getKey(mapping, path));
-            return new Blob(id, metadata.getETag());
+            HeadObjectRequest headObjectRequest = HeadObjectRequest.builder()
+                    .bucket(mapping.target)
+                    .key(getKey(mapping, path))
+                    .build();
+            HeadObjectResponse headObjectResponse = getClient().headObject(headObjectRequest);
+            return new Blob(id, headObjectResponse.eTag());
         } catch (Exception e) {
-            throw new BlobStoreException("Error creating reference for content at " + getFullKey(mapping, path), e);
+            throw new BlobStoreException(format("Error creating reference for content at '%s'", getFullKey(mapping, path)), e);
         }
     }
 
@@ -124,7 +140,14 @@ public class StudioAwsS3BlobStore extends AwsS3BlobStore implements StudioBlobSt
         Mapping mapping = getMapping(publishingTargetResolver.getPublishingTarget());
         logger.debug("Check if content exists at site '{}' path '{}'", site, getFullKey(mapping, path));
         try {
-            return getClient().doesObjectExist(mapping.target, getKey(mapping, path));
+            HeadObjectRequest headObjectRequest = HeadObjectRequest.builder()
+                    .bucket(mapping.target)
+                    .key(getKey(mapping, path))
+                    .build();
+            getClient().headObject(headObjectRequest);
+            return true;
+        } catch (NoSuchKeyException e) {
+            return false;
         } catch (Exception e) {
             logger.error("Failed to check if content exists at site '{}' path '{}'",
                     site, getFullKey(mapping, path), e);
@@ -150,8 +173,11 @@ public class StudioAwsS3BlobStore extends AwsS3BlobStore implements StudioBlobSt
         Mapping previewMapping = getMapping(publishingTargetResolver.getPublishingTarget());
         logger.debug("Get content from site '{}' path '{}'", site, getFullKey(previewMapping, path));
         try {
-            S3Object object = getClient().getObject(previewMapping.target, getKey(previewMapping, path));
-            return object.getObjectContent();
+            GetObjectRequest getObjectRequest = GetObjectRequest.builder()
+                    .bucket(previewMapping.target)
+                    .key(getKey(previewMapping, path))
+                    .build();
+            return getClient().getObject(getObjectRequest);
         } catch (Exception e) {
             logger.error("Failed to get content from site '{}' path '{}'",
                     site, getFullKey(previewMapping, path), e);
@@ -165,9 +191,12 @@ public class StudioAwsS3BlobStore extends AwsS3BlobStore implements StudioBlobSt
         Mapping previewMapping = getMapping(publishingTargetResolver.getPublishingTarget());
         logger.debug("Get content size from site '{}' path '{}'", site, getFullKey(previewMapping, path));
         try {
-            ObjectMetadata metadata =
-                    getClient().getObjectMetadata(previewMapping.target, getKey(previewMapping, path));
-            return metadata.getContentLength();
+            HeadObjectRequest headObjectRequest = HeadObjectRequest.builder()
+                    .bucket(previewMapping.target)
+                    .key(getKey(previewMapping, path))
+                    .build();
+            HeadObjectResponse headObjectResponse = getClient().headObject(headObjectRequest);
+            return headObjectResponse.contentLength();
         } catch (Exception e) {
             logger.error("Failed to get content size from site '{}' path '{}'",
                     site, getFullKey(previewMapping, path), e);
@@ -201,13 +230,13 @@ public class StudioAwsS3BlobStore extends AwsS3BlobStore implements StudioBlobSt
     }
 
     @Override
-    public String deleteContent(String site, String path, String approver) throws ServiceLayerException {
+    public void deleteContent(String site, String path) throws ServiceLayerException {
         checkReadWriteMode();
         Mapping previewMapping = getMapping(publishingTargetResolver.getPublishingTarget());
         logger.debug("Delete content at site '{}' path '{}'", site, getFullKey(previewMapping, path));
         if (!isFolder(path)) {
             try {
-                getClient().deleteObject(previewMapping.target, getKey(previewMapping, path));
+                deleteS3Object(getClient(), previewMapping.target, getKey(previewMapping, path));
             } catch (Exception e) {
                 logger.error("Failed to delete content at site '{}' path '{}'",
                         site, getFullKey(previewMapping, path), e);
@@ -215,63 +244,59 @@ public class StudioAwsS3BlobStore extends AwsS3BlobStore implements StudioBlobSt
                         site, getFullKey(previewMapping, path)), e);
             }
         } else {
-            ListObjectsV2Request request = new ListObjectsV2Request()
-                    .withBucketName(previewMapping.target)
-                    .withPrefix(appendIfMissing(getKey(previewMapping, path), "/"));
-            do {
-                try {
-                    ListObjectsV2Result result = getClient().listObjectsV2(request);
-                    request.setContinuationToken(result.getContinuationToken());
-
-                    String[] keys = result.getObjectSummaries().stream()
-                            .map(S3ObjectSummary::getKey)
-                            .collect(toList())
+            ListObjectsV2Request request = ListObjectsV2Request.builder()
+                    .bucket(previewMapping.target)
+                    .prefix(appendIfMissing(getKey(previewMapping, path), "/"))
+                    .build();
+            try {
+                ListObjectsV2Iterable result = getClient().listObjectsV2Paginator(request);
+                for (ListObjectsV2Response page : result) {
+                    String[] keys = page.contents().stream()
+                            .map(S3Object::key)
+                            .toList()
                             .toArray(new String[]{});
                     if (ArrayUtils.isNotEmpty(keys)) {
                         logger.trace("Delete content items at site '{}' paths '{}' from bucket '{}'",
                                 site, Arrays.toString(keys), previewMapping.target);
                         try {
-                            getClient().deleteObjects(new DeleteObjectsRequest(previewMapping.target).withKeys(keys));
+                            deleteS3Objects(getClient(), previewMapping.target, keys);
                         } catch (Exception e) {
                             logger.error("Failed to delete content items at site '{}' paths '{}' from bucket '{}'",
                                     site, Arrays.toString(keys), previewMapping.target, e);
                             throw new BlobStoreException(format("Failed to delete content items at site '%s' " +
                                             "paths '%s' from bucket '%s'",
-                                            site, Arrays.toString(keys), previewMapping.target), e);
+                                    site, Arrays.toString(keys), previewMapping.target), e);
                         }
                     }
-                } catch (Exception e) {
-                    logger.error("Failed to list content items at site '{}' path '{}'",
-                            site, getFullKey(previewMapping, path), e);
-                    throw new BlobStoreException(format("Failed to list content items at site '%s' path '%s'",
-                            site, getFullKey(previewMapping, path)), e);
                 }
-            } while(isNotEmpty(request.getContinuationToken()));
+            } catch (Exception e) {
+                logger.error("Failed to list content items at site '{}' path '{}'",
+                        site, getFullKey(previewMapping, path), e);
+                throw new BlobStoreException(format("Failed to list content items at site '%s' path '%s'",
+                        site, getFullKey(previewMapping, path)), e);
+            }
         }
-        return OK;
     }
 
     @Override
-    public Map<String, String> moveContent(String site, String fromPath, String toPath, String newName) throws ServiceLayerException {
+    public String moveContent(String site, String fromPath, String toPath, String newName) throws ServiceLayerException {
         checkReadWriteMode();
         Mapping previewMapping = getMapping(publishingTargetResolver.getPublishingTarget());
         logger.debug("Move content in site '{}' from '{}' to '{}'", site,
                 getFullKey(previewMapping, fromPath), getFullKey(previewMapping, toPath));
         if (isEmpty(newName)) {
             if (isFolder(fromPath)) {
-                ListObjectsV2Request request = new ListObjectsV2Request()
-                        .withBucketName(previewMapping.target)
-                        .withPrefix(appendIfMissing(getKey(previewMapping, fromPath), "/"));
-                do {
-                    try {
-                        ListObjectsV2Result result = getClient().listObjectsV2(request);
-                        request.setContinuationToken(result.getContinuationToken());
-
-                        String[] keys = result.getObjectSummaries().stream()
-                                .map(S3ObjectSummary::getKey)
-                                .collect(toList())
+                ListObjectsV2Request request = ListObjectsV2Request.builder()
+                        .bucket(previewMapping.target)
+                        .prefix(appendIfMissing(getKey(previewMapping, fromPath), "/"))
+                        .build();
+                try {
+                    ListObjectsV2Iterable result = getClient().listObjectsV2Paginator(request);
+                    for (ListObjectsV2Response page : result) {
+                        String[] keys = page.contents().stream()
+                                .map(S3Object::key)
+                                .toList()
                                 .toArray(new String[]{});
-
                         for (String key : keys) {
                             String filePath =
                                     Paths.get(getKey(previewMapping, fromPath)).relativize(Paths.get(key)).toString();
@@ -289,32 +314,33 @@ public class StudioAwsS3BlobStore extends AwsS3BlobStore implements StudioBlobSt
                                         getFullKey(previewMapping, toPath + "/" + filePath),
                                         e);
                                 throw new BlobStoreException(format("Failed to copy content in site '%s' from '%s' " +
-                                        "to '%s'", site,
+                                                "to '%s'", site,
                                         getFullKey(previewMapping, key),
                                         getFullKey(previewMapping, toPath + "/" + filePath)), e);
                             }
                         }
+
                         try {
-                            getClient().deleteObjects(new DeleteObjectsRequest(previewMapping.target).withKeys(keys));
+                            deleteS3Objects(getClient(), previewMapping.target, keys);
                         } catch (Exception e) {
                             logger.error("Failed to delete content in site '{}' paths '{}' from bucket '{}'",
                                     site, Arrays.toString(keys), previewMapping.target, e);
                             throw new BlobStoreException(format("Failed to delete content in site '%s' paths " +
                                             "'%s' from bucket '%s'",
-                                            site, Arrays.toString(keys), previewMapping.target), e);
+                                    site, Arrays.toString(keys), previewMapping.target), e);
                         }
-                    } catch (Exception e) {
-                        logger.error("Failed to list content from site '{}' paths '{}'",
-                                site, getFullKey(previewMapping, fromPath), e);
-                        throw new BlobStoreException(format("Failed to list content from site '%s' paths '%s'",
-                                site, getFullKey(previewMapping, fromPath)), e);
                     }
-                } while(isNotEmpty(request.getContinuationToken()));
+                } catch (Exception e) {
+                    logger.error("Failed to list content from site '{}' paths '{}'",
+                            site, getFullKey(previewMapping, fromPath), e);
+                    throw new BlobStoreException(format("Failed to list content from site '%s' paths '%s'",
+                            site, getFullKey(previewMapping, fromPath)), e);
+                }
             } else {
                 try {
                     copyFile(previewMapping.target, getKey(previewMapping, fromPath),
                             previewMapping.target, getKey(previewMapping, toPath), COPY_PART_SIZE, getClient());
-                    getClient().deleteObject(previewMapping.target, getKey(previewMapping, fromPath));
+                    deleteS3Object(getClient(), previewMapping.target, getKey(previewMapping, fromPath));
                 } catch (Exception e) {
                     logger.error("Failed to move content in site '{}' from '{}' to '{}'",
                             site,
@@ -331,153 +357,15 @@ public class StudioAwsS3BlobStore extends AwsS3BlobStore implements StudioBlobSt
             //TODO: Check if this is really needed, it looks like newName is always null
             throw new UnsupportedOperationException();
         }
-        return Collections.emptyMap();
+        return EMPTY;
     }
 
     @Override
-    public String copyContent(String site, String fromPath, String toPath) throws ServiceLayerException {
-        checkReadWriteMode();
-        Mapping previewMapping = getMapping(publishingTargetResolver.getPublishingTarget());
-        logger.debug("Copy content in site '{}' from '{}' to '{}'",
-                site, getFullKey(previewMapping, fromPath), getFullKey(previewMapping, toPath));
-        if (isFolder(fromPath)) {
-            ListObjectsV2Request request = new ListObjectsV2Request()
-                    .withBucketName(previewMapping.target)
-                    .withPrefix(appendIfMissing(getKey(previewMapping, fromPath), "/"));
-            do {
-                try {
-                    ListObjectsV2Result result = getClient().listObjectsV2(request);
-                    request.setContinuationToken(result.getContinuationToken());
-
-                    String[] keys = result.getObjectSummaries().stream()
-                            .map(S3ObjectSummary::getKey)
-                            .collect(toList())
-                            .toArray(new String[]{});
-
-                    for (String key : keys) {
-                        String filePath =
-                                Paths.get(getKey(previewMapping, fromPath)).relativize(Paths.get(key)).toString();
-                        logger.trace("Copy content in site '{}' from '{}' to '{}'",
-                                site,
-                                getFullKey(previewMapping, key),
-                                getFullKey(previewMapping, toPath + "/" + filePath));
-                        try {
-                            copyFile(previewMapping.target, key, previewMapping.target,
-                                    getKey(previewMapping, toPath + "/" + filePath), COPY_PART_SIZE, getClient());
-                        } catch (Exception e) {
-                            logger.error("Failed to copy content in site '{}' from '{}' to '{}'",
-                                    site,
-                                    getFullKey(previewMapping, key),
-                                    getFullKey(previewMapping, toPath + "/" + filePath),
-                                    e);
-                            throw new BlobStoreException(format("Failed to copy content in site '%s' from '%s' to '%s'",
-                                    site,
-                                    getFullKey(previewMapping, key),
-                                    getFullKey(previewMapping, toPath + "/" + filePath)), e);
-                        }
-                    }
-                } catch (Exception e) {
-                    logger.error("Failed to list content in site '{}' at '{}'",
-                            site, getFullKey(previewMapping, fromPath), e);
-                    throw new BlobStoreException(format("Failed to list content in site '%s' at '%s'",
-                            site, getFullKey(previewMapping, fromPath)), e);
-                }
-            } while (isNotEmpty(request.getContinuationToken()));
-        } else {
-            try {
-                copyFile(previewMapping.target, getKey(previewMapping, fromPath), previewMapping.target,
-                        getKey(previewMapping, toPath), COPY_PART_SIZE, getClient());
-            } catch (Exception e) {
-                logger.error("Failed to copy content in site '{}' from '{}' to '{}'",
-                        site,
-                        getFullKey(previewMapping, fromPath),
-                        getFullKey(previewMapping, toPath),
-                        e);
-                throw new BlobStoreException(format("Failed to copy content in site '%s' from '%s' to '%s'",
-                        site,
-                        getFullKey(previewMapping, fromPath),
-                        getFullKey(previewMapping, toPath)), e);
-            }
-        }
-        return OK;
-    }
-
-    @Override
-    public void publish(String site, String sandboxBranch, List<DeploymentItemTO> deploymentItems, String environment,
-                        String author, String comment) {
-        // If store is in readonly mode, nothing to do here.
-        if (readOnly) {
-            logger.warn("Publish request ignored in blobstore '{}' because it is readonly", id);
-            return;
-        }
-
-        Mapping previewMapping = getMapping(publishingTargetResolver.getPublishingTarget());
-        Mapping envMapping = getMapping(environment);
-        logger.debug("Publish content in site '{}' from bucket '{}' to bucket '{}'",
-                site, previewMapping.target, envMapping.target);
-        for (DeploymentItemTO item : deploymentItems) {
-            if (item.isDelete()) {
-                logger.trace("Delete content at site '{}' path '{}'", site, getFullKey(envMapping, item.getPath()));
-                try {
-                    getClient().deleteObject(envMapping.target, getKey(envMapping, item.getPath()));
-                    if (isNotEmpty(item.getOldPath())) {
-                        logger.trace("Delete content at site '{}' path '{}'",
-                                site, getFullKey(envMapping, item.getOldPath()));
-                        getClient().deleteObject(envMapping.target, getKey(envMapping, item.getOldPath()));
-                    }
-                } catch (Exception e) {
-                    logger.error("Failed to delete content at site '{}' path '{}'",
-                            site, getFullKey(previewMapping, item.getPath()), e);
-                    throw new BlobStoreException(format("Failed to delete content at site '%s' path '%s'",
-                            site, getFullKey(previewMapping, item.getPath())), e);
-                }
-            } else if (item.isMove()) {
-                logger.trace("Move content in site '{}' from '{}' to '{}'",
-                        site, getFullKey(envMapping, item.getOldPath()), getFullKey(envMapping, item.getPath()));
-                try {
-                    copyFile(previewMapping.target, getKey(previewMapping, item.getPath()), envMapping.target,
-                            getKey(envMapping, item.getPath()), COPY_PART_SIZE, getClient());
-                    if (!StringUtils.equals(item.getOldPath(), item.getPath())) {
-                        getClient().deleteObject(envMapping.target, getKey(envMapping, item.getOldPath()));
-                    }
-                } catch (Exception e) {
-                    logger.error("Failed to move content in site '{}' from '{}' to '{}'",
-                            site,
-                            getFullKey(envMapping, item.getOldPath()),
-                            getFullKey(envMapping, item.getPath()),
-                            e);
-                    throw new BlobStoreException(format("Failed to move content in site '%s' from '%s' to '%s'",
-                            site,
-                            getFullKey(envMapping, item.getOldPath()),
-                            getFullKey(envMapping, item.getPath())), e);
-                }
-            } else {
-                logger.trace("Copy content in site '{}' from '{}' to '{}'",
-                        site, getFullKey(previewMapping, item.getPath()), getFullKey(envMapping, item.getPath()));
-                try {
-                    copyFile(previewMapping.target, getKey(previewMapping, item.getPath()), envMapping.target,
-                            getKey(envMapping, item.getPath()), COPY_PART_SIZE, getClient());
-                } catch (Exception e) {
-                    logger.error("Failed to copy content in site '{}' from '{}' to '{}'",
-                            site,
-                            getFullKey(previewMapping, item.getPath()),
-                            getFullKey(envMapping, item.getPath()),
-                            e);
-                    throw new BlobStoreException(format("Failed to copy content in site '%s' from '%s' to '%s'",
-                            site,
-                            getFullKey(previewMapping, item.getPath()),
-                            getFullKey(envMapping, item.getPath())), e);
-                }
-            }
-        }
-    }
-
-    @Override
-    public void initialPublish(String siteId) {
+    public String initialPublish(final String siteId) {
         // If store is in readonly mode, nothing to do here.
         if (readOnly) {
             logger.warn("Initial publish request ignored in blobstore '{}' because it is readonly", id);
-            return;
+            return null;
         }
         Mapping previewMapping = getMapping(publishingTargetResolver.getPublishingTarget());
         Mapping liveMapping = getMapping(servicesConfig.getLiveEnvironment(siteId));
@@ -495,68 +383,69 @@ public class StudioAwsS3BlobStore extends AwsS3BlobStore implements StudioBlobSt
             copyFolder(previewMapping.target, previewMapping.prefix, statingMapping.target, statingMapping.prefix,
                     MIN_PART_SIZE, getClient());
         }
+        return null; // TODO: refactor these interfaces so we don't need to return anything
     }
 
     @Override
-    public RepositoryChanges publishAll(String siteId, String publishingTarget, String comment) {
-        // TODO: segregate these interfaces properly
-        // this method should not be called
-        throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public RepositoryChanges preparePublishAll(String siteId, String publishingTarget) {
-        // TODO: segregate these interfaces properly
-        // this method should not be called
-        throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public void completePublishAll(String siteId, String publishingTarget, RepositoryChanges changes, String comment) {
-        // If store is in readonly mode, nothing to do here.
+    public <T extends PublishItemTO> PublishChangeSet<T> publish(final PublishPackage publishPackage,
+                                                                 final String publishingTarget,
+                                                                 final Collection<T> blobStoreItems) throws ServiceLayerException {
+        final String siteId = publishPackage.getSite().getSiteId();
+        // If readonly, fail everything so shadow files are not committed
         if (readOnly) {
-            logger.warn("'Complete publish all' request ignored in blobstore '{}' because it is readonly", id);
-            return;
+            logger.warn("Publish request ignored in blobstore '{}' for site '{}', package '{}' because it is readonly",
+                    id, siteId, publishPackage.getId());
+            return new PublishChangeSet<>(blobStoreItems, emptyList());
         }
+
         Mapping previewMapping = getMapping(publishingTargetResolver.getPublishingTarget());
         Mapping targetMapping = getMapping(publishingTarget);
 
-        logger.info("Perform Publish All for site '{}' to target '{}'", siteId, targetMapping);
+        logger.info("Perform Publish for site '{}' to target '{}'", siteId, targetMapping);
 
-        for (String updatedPath : changes.getUpdatedPaths()) {
-            try {
-                // TODO: check if readonly? Or just ignore?
-                copyFile(previewMapping.target, getKey(previewMapping, updatedPath), targetMapping.target,
-                        getKey(targetMapping, updatedPath), COPY_PART_SIZE, getClient());
-            } catch (Exception e) {
-                logger.error("Failed to copy '{}' from bucket '{}' to bucket '{}' for site '{}': {}", updatedPath, previewMapping.target,
-                        targetMapping.target, siteId, e.getMessage());
-                changes.getFailedPaths().add(updatedPath);
+        Map<PublishItem.Action, List<T>> itemsByAction = blobStoreItems.stream().collect(groupingBy(PublishItemTO::getAction, Collectors.toList()));
+        Collection<T> failedItems = new ArrayList<>();
+        for (List<? extends PublishItemTO> batch : ListUtils.partition(new LinkedList<>(itemsByAction.computeIfAbsent(DELETE, k -> emptyList())), DELETE_BATCH_SIZE)) {
+            String[] keys = batch.stream().map(PublishItemTO::getPath).map(path -> getKey(targetMapping, path)).toArray(String[]::new);
+            deleteS3Objects(getClient(), targetMapping.target, keys);
+            batch.forEach(PublishItemTO::setCompleted);
+        }
+
+        List<AwsUtils.CopyPathRequest> updatedPaths = itemsByAction.computeIfAbsent(ADD, k -> emptyList()).stream()
+                .map(i-> getRequest(i, failedItems))
+                .toList();
+
+        if (isNotEmpty(updatedPaths)) {
+            AwsUtils.copyObjectsResultAware(getAsyncClient(), taskExecutor.getThreadPoolExecutor(),
+                    previewMapping.target, previewMapping.prefix,
+                    targetMapping.target, targetMapping.prefix, updatedPaths);
+        }
+        logger.info("Completed Publish for site '{}', package '{}' to target '{}'", siteId, publishPackage.getId(), publishingTarget);
+        return new PublishChangeSet<>(subtract(blobStoreItems, failedItems), failedItems);
+    }
+
+    private <T extends PublishItemTO> AwsUtils.CopyPathRequest getRequest(final T publishItemTO, final Collection<T> failedItems) {
+        return new AwsUtils.CopyPathRequest() {
+            @Override
+            public String getPath() {
+                return publishItemTO.getPath();
             }
-        }
 
-        DeleteObjectsRequest request = new DeleteObjectsRequest(targetMapping.target);
-        for (List<String> batch : ListUtils.partition(new LinkedList<>(changes.getDeletedPaths()), DELETE_BATCH_SIZE)) {
-            request.withKeys(batch.stream()
-                                  .map(path -> getKey(targetMapping, path))
-                                  .toArray(String[]::new));
-            getClient().deleteObjects(request);
-        }
+            @Override
+            public void fail(Throwable throwable) {
+                try {
+                    publishItemTO.setFailed(PublishUtils.translateItemException(throwable));
+                    failedItems.add(publishItemTO);
+                } catch (PublishException e) {
+                    throw new BlobStoreException(format("Unable to continue publishing package: %s", e.getMessage()), e);
+                }
+            }
 
-        logger.info("Completed Publish All for site '{}' to target '{}'", siteId, targetMapping);
-    }
-
-    @Override
-    public void cancelPublishAll(String siteId, String publishingTarget) {
-        // TODO: segregate these interfaces properly
-        // this method should not be called
-        throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public void duplicateSite(String sourceSiteId, String siteId, String sourceSandboxBranch, String sandboxBranch) {
-        // TODO: segregate these interfaces properly
-        throw new UnsupportedOperationException();
+            @Override
+            public void complete() {
+                publishItemTO.setCompleted();
+            }
+        };
     }
 
     @Override
@@ -568,16 +457,45 @@ public class StudioAwsS3BlobStore extends AwsS3BlobStore implements StudioBlobSt
         Mapping sourceMapping = sourceStudioBlobStore.getMapping(environment);
         Mapping targetMapping = getMapping(environment);
 
-        try {
-            if (targetMapping.equals(sourceMapping)) {
-                logger.info("Source and target mappings are the same, skipping copy operation");
-                return;
-            }
-            AwsUtils.copyObjects(getClient(), taskExecutor::getThreadPoolExecutor,
-                    sourceMapping.target, sourceMapping.prefix,
-                    targetMapping.target, targetMapping.prefix, items);
-        } catch (InterruptedException e) {
-            throw new BlobStoreException(format("Interrupted while waiting for S3 content duplication from site '%s' to '%s'", sourceMapping.target, targetMapping.target), e);
+        if (targetMapping.equals(sourceMapping)) {
+            logger.info("Source and target mappings are the same, skipping copy operation");
+            return;
         }
+        AwsUtils.copyObjects(getAsyncClient(), taskExecutor.getThreadPoolExecutor(),
+                sourceMapping.target, sourceMapping.prefix,
+                targetMapping.target, targetMapping.prefix, items);
+    }
+
+    /**
+     * Delete an S3 object
+     * @param client instance of {@link S3Client}
+     * @param bucketName bucket name
+     * @param keyName key name
+     */
+    private void deleteS3Object(S3Client client, String bucketName, String keyName) {
+        DeleteObjectRequest deleteObjectRequest = DeleteObjectRequest.builder()
+                .bucket(bucketName)
+                .key(keyName)
+                .build();
+        client.deleteObject(deleteObjectRequest);
+    }
+
+    /**
+     * Delete an array of S3 objects
+     * @param client instance of {@link S3Client}
+     * @param bucketName bucket name
+     * @param keys list of key name
+     */
+    private void deleteS3Objects(S3Client client, String bucketName, String[] keys) {
+        List<ObjectIdentifier> identifiers = new ArrayList<>();
+        for (String key : keys) {
+            identifiers.add(ObjectIdentifier.builder().key(key).build());
+        }
+        DeleteObjectsRequest request = DeleteObjectsRequest.builder()
+                .bucket(bucketName)
+                .delete(Delete.builder().objects(identifiers).build())
+                .build();
+        client.deleteObjects(request);
+        identifiers.clear();
     }
 }
